[package]
name = "oauth_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
maud = { version = "0.27", features = ["actix-web"] }
dotenv = "0.15.0"
urlencoding = "2.1.3"
serde = "1.0.219"
serde_urlencoded = "0.7"
serde_json = "1.0.143"
sha2 = "0.10.9"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
thiserror = "2.0.16"
jsonwebtoken = "9.3.1"